utf8 ist doch toll :P

--- a/skript.tex
+++ b/skript.tex
@@ -394,7 +394,7 @@ Also $<g>=G$ und $G$ ist die von $g$ erzeugte zyklische Gruppe.
 \begin{thm}
 Es sei $G$ eine Gruppe unf $H\in G$ eine Untergruppe.
 
-Die folgenden Bedingungen sind {\"a}quivalent:\\
+Die folgenden Bedingungen sind äquivalent:\\
 (i) es gilt: $bH=Hb$ für alle $b\in G$\\
 (ii) es gilt: $b^{-1}Hb=H$ für alle $b\in G$\\
 (iii) es gilt: $b^{-1}hb=H$ für alle $b\in G$ und $h\in H$
@@ -456,7 +456,7 @@ $e_H=f(e_G)=f(g\cdot_G g^{-1})=f(g)\cdot_{H}f(g^{-1}) \Rightarrow f(g^{-1})=f(g)
 dann ist $a_1\circ a_2: G_1\rightarrow G_3$ ein Gruppenhomomorphismus.\\
 
 \textbf{Beispiele}\\
-(1) F{\"u}r jedes $g \in G$ ist\\
+(1) Für jedes $g \in G$ ist\\
 $\mathbb{Z} \rightarrow G$\\
 $n \rightarrow g^n$\\
 ein Gruppenhomomorphismus.\\
@@ -464,7 +464,7 @@ ein Gruppenhomomorphismus.\\
 $(\mathbb{R},+)\rightarrow(\mathbb{R}^*,\cdot)$\\
 $x\rightarrow e^x$\\
 ist ein gruppenhomomorphismus.\\
-(3) F{\"u}r $(G,+)$ ablegt ist\\
+(3) Für $(G,+)$ ablegt ist\\
 $G\rightarrow G$\\
 $a\rightarrow na = a+...+a$(n-mal)\\
 ein Gruppenhomomorphismus.
@@ -484,14 +484,14 @@ Kern von $f$: $ker(f)=\{g\in G,f(g)=e_H\}$
 \end{defn}
 
 \begin{lemma}
-F{\"u}r einen Gruppenhomomorphismus $f: G \rightarrow H$ gilt:\\
+Für einen Gruppenhomomorphismus $f: G \rightarrow H$ gilt:\\
 (i) im(f) ist eine Untergruppe von $H$.//
 (ii) ker(f) ist eine normale Untergruppe von $G$.
 \end{lemma}
 
 \begin{proof}
 (i) folgt aus Eigenschaften (i) und (ii) für Gruppenhomomorphismen.\\
-(ii) f{\"u}r $a,b \in ker(f): f(ab^{-1})=f(a)f(b^{-1}=e_H$\\
+(ii) für $a,b \in ker(f): f(ab^{-1})=f(a)f(b^{-1}=e_H$\\
 $\Rightarrow ab^{-1} \in ker(f)$
 \end{proof}
 
@@ -1070,7 +1070,7 @@ Das Zentrum einer p-Gruppe G enthält nicht triviale Elemente $a \neq e$.
 	\end{notation}
 
 	\begin{nb}
-	F\"ur jedes Element $g\in G$ existiert
+	Für jedes Element $g\in G$ existiert
 	$$\tau_g: X \rightarrow X$$
 	$$x \rightarrow gx$$
 	\end{nb}
@@ -1084,7 +1084,7 @@ Das Zentrum einer p-Gruppe G enthält nicht triviale Elemente $a \neq e$.
 	
 	\begin{defn}
 	\begin{enumerate}
-		\item Es sei $\tau: G \times X \rightarrow X$ eine Gruppenoperation. F\"ur $x\in X$ heißt $Gx=\{ gx : g \in G\}$ die Bahn (oder Orbit) von X. 
+		\item Es sei $\tau: G \times X \rightarrow X$ eine Gruppenoperation. Für $x\in X$ heißt $Gx=\{ gx : g \in G\}$ die Bahn (oder Orbit) von X. 
 		\item Die Untergruppe $G_x=\{ g\in G : gx=x\}$ heißt Isotropiegruppe (oder Stabilisator) von $X$.
 		\item Menge der Fixpunkte unter $G$: $X^G=\{ x \in X : gx=x \forall g \in G\}$
 		\item Die Gruppenoperation ist treu, falls $G \rightarrow S_X$ injektiv ist.
@@ -1156,9 +1156,9 @@ Das Zentrum einer p-Gruppe G enthält nicht triviale Elemente $a \neq e$.
 	D.h. $p$ ist wohldefiniert als auch bijektiv.
 	$p$ ist ein $G$-Homomorphismus: $\forall a,b \in G$:
 	$$p(a(b(G_x)))=p(ab(G_x))=abx=ap(bG_x)$$
-	Die Bahnen einer $G$-Operation sind die \"Aquivalenzklassen bezüglich der Äquivalenzrelation:
+	Die Bahnen einer $G$-Operation sind die Äquivalenzklassen bezüglich der Äquivalenzrelation:
 	
-	$x,y \in X : x \sim y \xLeftrightarrow{Def} x=gy$ f\"ur ein $g\in G$\\
+	$x,y \in X : x \sim y \xLeftrightarrow{Def} x=gy$ für ein $g\in G$\\
 	D.h. die Bahnen bilden eine Partition von $X$.
 	
 	Für ein Repräsentantensystem $\{ x_i\}_{i\in I}$ der Bahnen von G gilt die Bahnengleichung:
