--- a/skript.tex
+++ b/skript.tex
@@ -342,7 +342,7 @@ $f \circ g = Id_{G \slash H}$ analog.
 \end{proof}
 
 \begin{thm}
-Es seien $H$,$K$ Untergruppen von $G$ mit $K \subset H \subset G$. Dann gilt: $$[G:K]=[H:K]*[G*H]$$
+Es seien $H$,$K$ Untergruppen von $G$ mit $K \subset H \subset G$. Dann gilt: $$[G:K]=[H:K]*[G:H]$$
 \end{thm}
 
 \begin{proof}
